--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -54,7 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:longClickable="false"
-            android:onClick="set_proceso_cobro"
+            android:onClick="set_mensage"
             app:srcCompat="@drawable/prestamo2" />
     </LinearLayout>
 
