--- a/app/src/main/res/layout/prestamo_view.xml
+++ b/app/src/main/res/layout/prestamo_view.xml
@@ -191,6 +191,7 @@
                             android:layout_marginLeft="5dp"
                             android:layout_weight="25"
                             android:text="Cantidad de Cuotas"
+                            android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:textStyle="bold" />
 
@@ -200,6 +201,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="50"
                             android:text="Cantidad Cuotas Restantes"
+                            android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:textStyle="bold" />
 
@@ -209,6 +211,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="25"
                             android:text="Cuota"
+                            android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -253,7 +256,60 @@
                             android:text="0"
                             android:textAlignment="center" />
                     </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/textvm_porct_atraz"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="25"
+                            android:text="Cuota"
+                            android:textAlignment="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                            android:textStyle="bold" />
+                        <EditText
+                            android:id="@+id/prestamo_view_porct_atrazo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:ems="10"
+                            android:enabled="false"
+                            android:hint="porcentage por atrazo"
+                            android:inputType="number"
+                            android:textAlignment="center" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/textvmnt_fijo_atraz"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="25"
+                            android:text="Cuota"
+                            android:textAlignment="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                            android:textStyle="bold" />
+                        <EditText
+                            android:id="@+id/prestamo_view_mnt_fijo_atraz"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:ems="10"
+                            android:enabled="false"
+                            android:hint="monto fijo por atrazo"
+                            android:inputType="number"
+                            android:textAlignment="center" />
+                    </LinearLayout>
+
                 </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -336,6 +392,7 @@
                             android:inputType="date" />
 
                     </LinearLayout>
+
                 </LinearLayout>
 
                 <LinearLayout
