--- a/app/src/main/res/layout/activity_pago.xml
+++ b/app/src/main/res/layout/activity_pago.xml
@@ -274,6 +274,31 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/pago_cheq_imp_recibo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Imprimir"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textStyle="bold|italic" />
+                <CheckBox
+                    android:id="@+id/pago_cheq_pdf"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="PDF"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textStyle="bold|italic" />
+            </LinearLayout>
+
+
         </LinearLayout>
 
         <LinearLayout
