--- a/app/src/main/res/layout/prestamo_view.xml
+++ b/app/src/main/res/layout/prestamo_view.xml
@@ -262,15 +262,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
+
                         <TextView
                             android:id="@+id/textvm_porct_atraz"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="25"
-                            android:text="Cuota"
+                            android:text="Porcentage Atrazo"
                             android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:textStyle="bold" />
+
                         <EditText
                             android:id="@+id/prestamo_view_porct_atrazo"
                             android:layout_width="wrap_content"
@@ -287,15 +289,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
+
                         <TextView
                             android:id="@+id/textvmnt_fijo_atraz"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="25"
-                            android:text="Cuota"
+                            android:text="Comision Fija"
                             android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:textStyle="bold" />
+
                         <EditText
                             android:id="@+id/prestamo_view_mnt_fijo_atraz"
                             android:layout_width="wrap_content"
