modificaciones 2021-11-28 correcciones al cobro de las cuotas no se estaba actualizando la cantidad restante de cuotas. se agrega la funcionalidad de recibos de pago en pdf dentro del historico de pagos para estos se implemento serializable en varias clases

--- a/app/src/main/res/layout/prestamo_alta.xml
+++ b/app/src/main/res/layout/prestamo_alta.xml
@@ -240,7 +240,7 @@
                 android:ems="10"
                 android:enabled="false"
                 android:hint="porcentage por atrazo"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:textAlignment="center" />
 
             <EditText
@@ -251,7 +251,7 @@
                 android:ems="10"
                 android:enabled="false"
                 android:hint="monto fijo por atrazo"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:textAlignment="center" />
 
             <LinearLayout
