--- a/app/src/main/res/layout/prestamo_view.xml
+++ b/app/src/main/res/layout/prestamo_view.xml
@@ -21,9 +21,9 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="5dp"
-                android:layout_marginBottom="10dp"
-                android:orientation="vertical"
-                android:background="@color/white">
+                android:layout_marginBottom="5dp"
+                android:background="@color/white"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -84,6 +84,16 @@
                     android:orientation="vertical">
 
 
+                    <EditText
+                        android:id="@+id/prestamo_view_fecalta"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="40"
+                        android:ems="10"
+                        android:enabled="false"
+                        android:inputType="date"
+                        android:textAlignment="center" />
+
                     <TextView
                         android:id="@+id/textView9"
                         android:layout_width="match_parent"
@@ -94,16 +104,6 @@
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                         android:textSize="18sp"
                         android:textStyle="bold" />
-
-                    <EditText
-                        android:id="@+id/prestamo_view_fecalta"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="40"
-                        android:ems="10"
-                        android:enabled="false"
-                        android:inputType="date"
-                        android:textAlignment="center" />
                 </LinearLayout>
 
 
@@ -283,6 +283,7 @@
                             android:hint="porcentage por atrazo"
                             android:inputType="number"
                             android:textAlignment="center" />
+
                     </LinearLayout>
 
                     <LinearLayout
@@ -310,6 +311,7 @@
                             android:hint="monto fijo por atrazo"
                             android:inputType="number"
                             android:textAlignment="center" />
+
                     </LinearLayout>
 
                 </LinearLayout>
@@ -320,16 +322,6 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/textView17"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Restante"
-                        android:textAlignment="center"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
                     <EditText
                         android:id="@+id/prestamo_view_restante"
                         android:layout_width="match_parent"
@@ -339,6 +331,16 @@
                         android:inputType="numberSigned"
                         android:text="0"
                         android:textAlignment="center" />
+
+                    <TextView
+                        android:id="@+id/textView17"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Restante"
+                        android:textAlignment="center"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -407,12 +409,14 @@
                     android:orientation="horizontal"
                     android:padding="10dp">
 
-                    <ImageButton
-                        android:id="@+id/prestamo_view_bt_modficar"
+                    <Button
+                        android:id="@+id/prestamo_view_hist_pagos"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
-                        app:srcCompat="@android:drawable/ic_menu_edit" />
+                        android:text="historial Pagos"
+                        android:textAlignment="center"
+                        android:textDirection="locale" />
 
                     <ImageButton
                         android:id="@+id/prestamo_view_bt_pagar"
@@ -424,26 +428,9 @@
                     <ImageButton
                         android:id="@+id/prestamo_view_bt_eliminar"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         app:srcCompat="@android:drawable/ic_menu_delete" />
-
-                    <Button
-                        android:id="@+id/prestamo_view_hist_pagos"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="historial Pagos"
-                        android:textAlignment="center"
-                        android:textDirection="locale" />
-
-                    <ImageButton
-                        android:id="@+id/prestamo_view_bt_listar_amort"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:visibility="gone"
-                        app:srcCompat="@android:drawable/ic_menu_agenda" />
 
                     <ImageButton
                         android:id="@+id/prestamo_vie_bt_contrato"
@@ -452,6 +439,21 @@
                         android:layout_weight="1"
                         android:visibility="gone"
                         app:srcCompat="@drawable/contrato_resise" />
+
+                    <ImageButton
+                        android:id="@+id/prestamo_view_bt_modficar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        app:srcCompat="@android:drawable/ic_menu_edit" />
+
+                    <ImageButton
+                        android:id="@+id/prestamo_view_bt_listar_amort"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:visibility="gone"
+                        app:srcCompat="@android:drawable/ic_menu_agenda" />
 
                 </LinearLayout>
 
