--- a/app/src/main/res/layout/prestamo_view.xml
+++ b/app/src/main/res/layout/prestamo_view.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -11,9 +11,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:background="@color/fondo"
             android:gravity="center"
-            android:orientation="vertical"
-            android:background="@color/fondo">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -28,6 +29,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -84,16 +86,6 @@
                     android:orientation="vertical">
 
 
-                    <EditText
-                        android:id="@+id/prestamo_view_fecalta"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="40"
-                        android:ems="10"
-                        android:enabled="false"
-                        android:inputType="date"
-                        android:textAlignment="center" />
-
                     <TextView
                         android:id="@+id/textView9"
                         android:layout_width="match_parent"
@@ -104,6 +96,17 @@
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                         android:textSize="18sp"
                         android:textStyle="bold" />
+
+                    <EditText
+                        android:id="@+id/prestamo_view_fecalta"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="40"
+                        android:ems="10"
+                        android:enabled="false"
+                        android:inputType="date"
+                        android:textAlignment="center" />
+
                 </LinearLayout>
 
 
@@ -263,16 +266,6 @@
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/textvm_porct_atraz"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="25"
-                            android:text="Porcentage Atrazo"
-                            android:textAlignment="center"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                            android:textStyle="bold" />
-
                         <EditText
                             android:id="@+id/prestamo_view_porct_atrazo"
                             android:layout_width="wrap_content"
@@ -284,22 +277,22 @@
                             android:inputType="number"
                             android:textAlignment="center" />
 
+                        <TextView
+                            android:id="@+id/textvm_porct_atraz"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="25"
+                            android:text="Porcentage Atrazo"
+                            android:textAlignment="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                            android:textStyle="bold" />
+
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/textvmnt_fijo_atraz"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="25"
-                            android:text="Comision Fija"
-                            android:textAlignment="center"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                            android:textStyle="bold" />
 
                         <EditText
                             android:id="@+id/prestamo_view_mnt_fijo_atraz"
@@ -311,6 +304,16 @@
                             android:hint="monto fijo por atrazo"
                             android:inputType="number"
                             android:textAlignment="center" />
+
+                        <TextView
+                            android:id="@+id/textvmnt_fijo_atraz"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="25"
+                            android:text="Comision Fija"
+                            android:textAlignment="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
@@ -358,8 +361,10 @@
                             android:id="@+id/textView18"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
                             android:layout_weight="1"
                             android:text="Fecha ultimo cobro"
+                            android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:textStyle="bold" />
 
@@ -383,8 +388,10 @@
                             android:id="@+id/textView19"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
                             android:layout_weight="1"
                             android:text="Fecha ultimo pago"
+                            android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                             android:textStyle="bold" />
 
