modificaciones 2022-01-07 tube que cambiar de ide dado a que el anterior me daba un error sin sentido, corrijo la interfaz de estadisticas, ya itera bien los pagos, los muestro en barra

--- a/app/src/main/res/layout/activity_mantenimiento_estadisticas.xml
+++ b/app/src/main/res/layout/activity_mantenimiento_estadisticas.xml
@@ -86,6 +86,12 @@
                     android:layout_height="300dp"
                     tools:ignore="MissingConstraints" />
 
+                <com.github.mikephil.charting.charts.BarChart
+                    android:id="@+id/barra_graficas"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    tools:ignore="MissingConstraints" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
